# trash_mover_client

./: .gitignore  CMakeLists.txt  build_test.sh
.github/workflows/: BuildTest.yml
src/: ArgsDefinition.cpp  ArgsDefinition.h  ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  ServerCommunication.cpp  ServerCommunication.h  ServerDownloader.cpp  ServerDownloader.h  main.cpp
test/: CMakeLists.txt
test/test/: ArgumentTest.cpp  ServerCommunicationTest.cpp  test_main.cpp
